software/components/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    toolkit.fluxcd.io/tenant: component
    hostk8s.component: istio
